Fixed bug #63176 (Segmentation fault when instantiate 2 persistent PDO to the same db server)